--- a/car-app/src/app/car/current-car/current-car.component.html
+++ b/car-app/src/app/car/current-car/current-car.component.html
@@ -21,12 +21,12 @@
         <div class="registration form">
             <form #form="ngForm" (ngSubmit)="saveCar(form)">
                 <header>Edit Car</header>
-                <input type="text" name="imgUrl" placeholder="Enter car image (url)" value="{{car.imgUrl}}" ngModel #inputImgUrl="ngModel" required>
-                <input type="text" name="carName" placeholder="Enter car name" value="{{car.carName}}" ngModel #inputCarName="ngModel" required>
-                <input type="text" name="brand" placeholder="Enter car brand" value="{{car.brand}}" ngModel #inputBrand="ngModel" required>
-                <input type="text" name="year" placeholder="Enter car year" value="{{car.year}}" ngModel #inputYear="ngModel" required>
-                <input type="text" name="color" placeholder="Enter car color" value="{{car.color}}" ngModel #inputColor="ngModel" required>
-                <textarea name="description" placeholder="Enter car description" value="{{car.description}}"  ngModel #inputDescription="ngModel" required></textarea>
+                <input type="text" name="imgUrl" placeholder="Enter car image (url)" value="{{car.imgUrl}}" ><!--ngModel #inputImgUrl="ngModel" required-->
+                <input type="text" name="carName" placeholder="Enter car name" value="{{car.carName}}" ngModel #inputCarName="ngModel" required><!--ngModel #inputCarName="ngModel" required-->
+                <input type="text" name="brand" placeholder="Enter car brand" value="{{car.brand}}" ><!--ngModel #inputBrand="ngModel" required-->
+                <input type="text" name="year" placeholder="Enter car year" value="{{car.year}}" ><!--ngModel #inputYear="ngModel" required-->
+                <input type="text" name="color" placeholder="Enter car color" value="{{car.color}}" ><!--ngModel #ngModel #inputColor="ngModel" required-->
+                <textarea name="description" placeholder="Enter car description" value="{{car.description}}"  ></textarea><!--ngModel #inputDescription="ngModel" required-->
                 <button (click)="onCancel($event)" height="100px" class="btn">Cancel</button>
                 <button [disabled]="form.invalid" height="100px" class="btn">Save</button>
             </form>
