fix cars routing

--- a/car-app/src/app/car/cars-list/cars-list.component.html
+++ b/car-app/src/app/car/cars-list/cars-list.component.html
@@ -10,7 +10,7 @@
                 <div class="card-info">
                     <h2>{{car.brand.toUpperCase()}}</h2>
                     <p>{{car.carName}}</p>
-                    <p>Likes: <span>{{car.likes?.length || 0}}</span></p>
+                    <p>Likes: <span>{{car.likes.length || 0}}</span></p>
                     <p>{{car.description}}</p>
                     <a routerLink="/cars/{{car._id}}" class="btn">Details</a>
                 </div>
