--- a/car-app/src/app/car/current-car/current-car.component.html
+++ b/car-app/src/app/car/current-car/current-car.component.html
@@ -6,7 +6,7 @@
         <p>Model: {{car.brand}}</p>
         <p>Year: {{car.year}}</p>
         <p>Color: {{car.color}}</p>
-        <p>Likes: <span>{{car.likes?.length || 0}}</span></p>
+        <p>Likes: <span>{{car.likes.length || 0}}</span></p>
         <p>{{car.description}}</p>
 
         <button class="btn">Like</button>
