--- a/car-app/src/app/car/current-car/current-car.component.html
+++ b/car-app/src/app/car/current-car/current-car.component.html
@@ -10,13 +10,14 @@
         <p>{{car.description}}</p>
 
         <ng-container *ngIf="isLoggedIn">
-            <ng-container *ngIf="!isOwnerF">
+            <ng-container *ngIf="!isOwner">
             <button (click)="likeCar()" class="btn">Like</button>
             </ng-container>
-            <ng-container *ngIf="isOwnerF">
-            <button (click)="onToggle()" class="btn">Edit</button>
-            <button (click)="delCar()" class="btn">Delete</button>
-            </ng-container>
+            
+            <ng-container *ngIf="isOwner">
+                <button (click)="onToggle()" class="btn">Edit</button>
+                <button (click)="delCar()" class="btn">Delete</button>
+                </ng-container>
         </ng-container>
 
     </section>
